# idf-im-lib

./: CONTRIBUTING.MD  Cargo.toml  LICENSE-MIT  README.md  deps.txt
.github/workflows/: build_and_test.yaml  pr-jira-sync.yml
bash_scripts/: activate_idf_template.sh
powershell_scripts/: create_desktop_shortcut_template.ps1  idf_tools_profile_template.ps1  install_scoop.ps1
python_scripts/sanity_check/: import_standard_library.py  try_https.py
src/: command_executor.rs  drivers.rs  idf_config.rs  idf_tools.rs  idf_versions.rs  lib.rs  python_utils.rs  settings.rs  system_dependencies.rs  utils.rs  version_manager.rs  win_tools.rs
