[package]
name = "idf-im-lib"
version = "0.1.2"
edition = "2021"

[features]
userustpython = ["dep:rustpython-vm", "dep:rustpython-stdlib"]

[dependencies]
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.4"
colored = "2.1.0"
sys-info = "0.9.1"
decompress = "0.6.0"
git2 = "0.19.0"
sha2 = "0.10.8"
log = "0.4.21"
dirs = "5.0.1"
tera = "1.20.0"
config = "0.14.0"
toml = "0.8"

rustpython-vm = { git = "https://github.com/Hahihula/RustPython.git", branch = "test-rust-build", features = ["freeze-stdlib"], optional = true }
rustpython-stdlib = { git = "https://github.com/Hahihula/RustPython.git", branch = "test-rust-build", features = ["ssl-vendor"], optional = true }